# orderflow-alpha

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: api.md  index.md  installation.md  usage.md
notebooks/: current_limitations.md  scratch.ipynb
src/orderflow/: __init__.py  features.py  get_data.py  visualisation.py
src/orderflow/get_data/: _coinalyze.py  binance.py  bybit.py  hyperliquid.py  okx.py
